@@ -458,6 +458,9 @@ Goto next slide
 .B r, R
 Reload current image. Useful for webcams.
 .TP 5
+.B v, V
+Toggle fullscreen.
+.TP 5
 .B w, W
 Size window to current image size.
 .TP 5
